@@ -138,11 +138,13 @@ getKeyID(const char *originID, const struct match *mtc)
     return ret;
 }
 
-char *getSigKeyID (const char *deb, const char *type) {
+char *
+getSigKeyID(struct deb_archive *deb, const char *type)
+{
     static char buf[2048];
     struct dpkg_error err;
     int pread[2], pwrite[2];
-    off_t len = checkSigExist(type);
+    off_t len = checkSigExist(deb, type);
     pid_t pid;
     FILE *ds_read;
     char *c, *ret = NULL;
@@ -176,8 +178,8 @@ char *getSigKeyID (const char *deb, const char *type) {
     close(pread[1]); close(pwrite[0]);
 
     /* First, let's feed gpg our signature. Don't forget, our call to
-     * checkSigExist() above positioned the deb_fd file pointer already.  */
-    if (fd_fd_copy(deb_fd, pwrite[1], len, &err) < 0)
+     * checkSigExist() above positioned the deb->fd file pointer already.  */
+    if (fd_fd_copy(deb->fd, pwrite[1], len, &err) < 0)
 	ohshit("getSigKeyID: error reading signature (%s)", err.str);
 
     if (close(pwrite[1]) < 0)
