@@ -30,6 +30,7 @@ debsig-verify (0.11) UNRELEASED; urgency=low
   * Explicitly check strcmp() return value instead of handling it as a bool.
   * Switch originID from global to function scoped variable.
     Thanks to Michael Vogt <mvo@ubuntu.com>.
+  * Switch deb and deb_fd from global to a function scoped struct.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 10:39:31 +0200
 
